# simplicity-engine

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  MOBILE-TESTING-SETUP.md  README.md  TESTING.md
.github/workflows/: ci.yml  nightly.yml  release.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/simplicityengine/hellopixel/: HelloPixelActivity.java
android/app/src/main/res/values/: strings.xml
cmake/toolchains/: mingw-w64-x86_64.cmake
docs/: engine-definition.md  movable-file-handle-todo.md  palette-mapping.md  platform-targets-todo.md  ssh-remote-runner-todo.md
docs/mobile-testing/: README.md
probes/: README.md
probes/macos/: bookmark_probe.mm
scripts/: README.md  build-in-container.sh  build-target.sh  build_target.sh  install-hints.sh  package-target.sh  package_linux.sh  package_macos.sh  package_target.sh  package_windows_zip.ps1  release.sh  run-target.sh  run.sh  run_android_emulator.sh  run_android_tablet.sh  run_ios_ipad.sh  run_ios_iphone.sh  run_ios_simulator.sh  run_target.sh  setup-target.sh  setup_android_emulators.sh  setup_ios_simulators.sh  setup_target.sh  setup_utm.sh  smoke.sh  test.sh
scripts/impl/: build-in-container.sh  package_linux.sh  package_macos.sh  release.sh  run.sh  run_android_emulator.sh  run_ios_simulator.sh  setup_utm.sh  smoke.sh  test.sh
scripts/impl/parallels/: install-hints.ps1  install-hints.sh  run-windows.sh  setup.sh
scripts/impl/parallels/linux/: guest-build-run.sh  run-linux.sh
scripts/parallels/: README.md  guest-build-run.ps1  guest-exec.sh  install-hints.ps1  install-hints.sh  run-windows.sh  setup.sh
scripts/parallels/linux/: README.md  guest-build-run.sh  run-linux.sh
src/: fast_rng.hpp  main.c  main.cpp
tests/: smoke_fast_rng.cpp  smoke_sdl_init.cpp  test_fast_rng_vectors.cpp
tools/: README.md  package_linux.sh  package_macos.sh  package_windows_zip.ps1  release.sh  run.sh  run_android_emulator.sh  run_android_phone.sh  run_android_tablet.sh  run_ios_ipad.sh  run_ios_iphone.sh  run_ios_simulator.sh  smoke.sh  test.sh
tools/parallels/: README.md  guest-build-run.ps1  guest-exec.sh  install-hints.sh  run-windows.sh  setup.sh
tools/parallels/linux/: README.md  guest-build-run.sh  run-linux.sh
